# RNG2024

./: .clang-format  .gitignore  .ycm_extra_conf.py  CMakeLists.txt  LICENSE  README.md  credits.txt
assets/: level.ldtk
assets/shaders/: dither_frag.glsl  upscale_frag.glsl
src/: CMakeLists.txt  battery.cpp  battery.hpp  bird.cpp  bird.hpp  block.cpp  block.hpp  bullet.cpp  bullet.hpp  cached_resource.hpp  component.hpp  enemy.cpp  enemy.hpp  game.cpp  game.hpp  gen.cpp  gen.hpp  hurtable.cpp  hurtable.hpp  input.cpp  input.hpp  interactable.cpp  interactable.hpp  level.cpp  level.hpp  level_definitions.hpp  level_loader.cpp  level_loader.hpp  lib.cpp  lib.hpp  light.cpp  light.hpp  main.cpp  main_page.html  manager.cpp  manager.hpp  mask.hpp  particles.cpp  particles.hpp  physics.cpp  (+13 more)
src/shaders/: CMakeLists.txt  dither_frag.glsl  upscale_frag.glsl
